# Jax-Wavelet-Toolbox

./: .bumpversion.cfg  .flake8  .readthedocs.yml  CITATION.bib  README.md  README.rst  conv_fwt.py  conv_fwt_2d.py  license  lorenz.py  noxfile.py  pytest.ini  setup.cfg  test_conv_fwt.py  test_conv_fwt2d.py  test_jax.py  tox.ini  wave_util.py
.github/workflows/: tests.yml
.workflows/: tests.yml
docs/: conf.py  index.rst  jaxwt.rst  modules.rst  requirements.txt
examples/: packet_transform.py
examples/cwt_chirp_analysis/: cwt_chirp_analysis.py  readme.md
examples/deepfake_analysis/: README.md  packet_plot.py
examples/packet_analysis/: packet_transform.py  readme.md
src/jaxlets/: __init__.py  conv_fwt.py  conv_fwt_2d.py  lorenz.py  packets.py  utils.py  wave_util.py
src/jaxwt/: __init__.py  _lorenz.py  _stationary_transform.py  continuous_transform.py  conv_fwt.py  conv_fwt_2d.py  conv_fwt_3d.py  packets.py  stationary_transform.py  stationary_transform_2d.py  utils.py  version.py
src/jwt/: conv_fwt.py  conv_fwt_2d.py  packets.py  utils.py  version.py
tests/: __init__.py  _lorenz.py  test_conv_fwt.py  test_conv_fwt2d.py  test_conv_fwt3d.py  test_cwt.py  test_jax.py  test_jit.py  test_packets.py  test_single_level.py  test_swt.py  test_swt2d.py  test_util.py
