##########################
# Setup.py Configuration #
##########################
[metadata]
name = jaxlets
version = 0.0.1-dev
description = Differentiable and gpu enabled fast wavelet transforms in JAX
long_description = file: README.rst

[options]
install_requires =
    PyWavelets
    jax
    scipy
    matplotlib
    click

packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
jax_cpu =
    jax
    jaxlib
