##########################
# Setup.py Configuration #
##########################
[metadata]
name = jaxwt
version = 0.0.9
description = Differentiable and gpu enabled fast wavelet transforms in JAX
long_description = file: README.rst
long_description_content_type = text/x-rst

# URLs associated with the project
url = https://github.com/v0lta/Jax-Wavelet-Toolbox
download_url = https://github.com/v0lta/Jax-Wavelet-Toolbox/releases
project_urls =
    Bug Tracker = https://github.com/v0lta/Jax-Wavelet-Toolbox/issues
    Source Code = https://github.com/v0lta/Jax-Wavelet-Toolbox

# Author information
author = Moritz Wolter
author_email = moritz@wolter.tech
maintainer = Moritz Wolter
maintainer_email = moritz@wolter.tech

# License information
license = EUPL-1.2
license_file = LICENSE


classifiers =
    License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering


[options]
install_requires =
    PyWavelets
    jax
    jaxlib
    scipy
    matplotlib
    numpy
    pytest
    nox
    pooch

packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
jax_cpu =
    jax
    jaxlib


##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = google
strictness = short